--- a/fs/index.htm
+++ b/fs/index.htm
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-<!-- Copyright (c) 2009-2013 Texas Instruments Incorporated.  All rights reserved. -->
 <meta content="text/html;charset=ISO-8869-1" http-equiv="content-type">
-<title>About Texas Instruments</title>
+<title>Morse Code Encoder</title>
 <script type="text/javascript">
 <!--
+/*
 function SetFormDefaults()
 {
 document.iocontrol.LEDOn.checked = ls;
 document.iocontrol.PWMOn.checked = ps;
 document.iocontrol.PWMFrequency.value = pf;
 document.iocontrol.PWMDutyCycle.value = pd;
-}
+}*/
 //-->
 </script>
 <style type="text/css">
@@ -28,18 +28,34 @@ h1 {
 	font-family: Arial;
 	font-size: 24pt;
 	font-style: italic;
+	text-align: left;
 }
 h2 {
 	color: #000000;
 	font-family: Arial;
 	font-size: 18pt;
 	font-style: bold;
+	text-align: left;
 }
 h3 {
-	color: #7C7369;
+	color: #000000;
 	font-family: Arial;
 	font-size: 12pt;
 	font-style: bold;
+	text-align: left;
+}
+p {
+	color: GrayText;
+	font-family: Arial;
+	font-size: 12pt;
+	font-weight: bold;
+	text-align: left;
+}
+td {
+	color: #7C7369;
+	font-family: Arial;
+	font-size: 12pt;
+	width: 15%;
 }
 </style>
 </head>
@@ -47,22 +63,25 @@ h3 {
 <body>
 
 <table>
-<tr>
-		<td align="left" valign="top"><center>
-		<h2 align="left">Morse Code Encoder</h2>
-		<h3 align="left">Team:</h3>
-		<p align="left">Olamide Kolawole</p>
-		<p align="left">Luis Stolk</p>
-		</center><br></td>
+	<tr>
 		<td align="left" valign="top">
-<img src="./images/austin.gif">
-</td>
-
-</tr>
+		<img alt="The University of Texas at Austin" src="./images/clee_s.jpg">
+		<br><br>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top"><center>
+		<h2>Morse Code Encoder</h2>
+		<h3>Team:</h3>
+		<p>Olamide Kolawole</p>
+		<p>Luis Stolk</p>
+		</center><br></td>
+	</tr>
+	
 </table>
 <table>
 	<tr>
-		<td align="left" valign="top" width="15%"><br>
+		<td align="left" valign="top"><br>
 		<ul>
 			<li><a href="io_cgi.ssi">Encode Message</a> <br><br></li>
 		</ul>
